...
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="32"/>
                                        <segments>
                                            <segment title="Log in"/>
                                            <segment title="Sign up"/>
                                        </segments>
...
                                        <rect key="frame" x="0.0" y="127" width="300" height="34"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9Ew-PM-0TB">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                        <rect key="frame" x="0.0" y="192" width="300" height="34"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jwi-6A-2Fj">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="34"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="profile" springLoaded="YES" id="Ozm-TJ-2gi"/>
                    <navigationItem key="navigationItem" id="9bW-gx-ISQ"/>
                    <connections>
...
                                                                                <nil key="highlightedColor"/>
                                                                            </label>
                                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Week 01 - Day 01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lKN-
                                                                                <rect key="frame" x="112" y="10" width="133" height="21"/>
                                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                                    </cells>
                                                </collectionView>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="See complete plan" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QDu-f9-UcE">
                                                    <rect key="frame" x="294" y="5" width="105" height="15"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
...
                                    <constraint firstAttribute="height" constant="51" id="QXQ-xw-W3p"/>
                                </constraints>
                                <state key="normal" title="Create Training Plan">
                                    <color key="titleColor" systemColor="systemOrangeColor"/>
                                </state>
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cfI-jT-4dp" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Clients" image="clients" springLoaded="YES" id="Ww3-YA-KYp"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="KWs-rO-3EU">
...
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="efv-nU-wb4" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Training" image="trainingPlan" id="RTU-7w-6Dl"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="AbK-ba-huS"/>
...
