...
        facebookButton.isHidden = true
        self.loginStackView.addSubview(loginButton)
        facebookButton.sendActions(for: UIControl.Event.touchUpInside)
    }
    
    func addRoundedButton() {
        facebookButton.setTitle("Continue with Facebook", for: .normal)
        facebookButton.setImage(UIImage(named: "f_logo_RGB-White_1024"), for: .normal)
        facebookButton.alignImageLeft()
        facebookButton.layer.cornerRadius = 20
        self.loginStackView.addSubview(loginButton)
    }
    
...
