...
            .padding()
            
            Button(action: {
                settingsData.logOut()
                presentationMode.wrappedValue.dismiss()
            }, label: {
                Text("Log out")
                    .foregroundColor(.white)
                    .fontWeight(.bold)
                    .padding(.vertical)
                    .frame(width: UIScreen.main.bounds.width - 100)
                    .background(Color.blue)
                    .clipShape(Capsule())
...
